-- fixed user list not being centered on mobile
##UGH CSS

--- a/static/layout.css
+++ b/static/layout.css
@@ -22,6 +22,13 @@
     padding: 10px;
     margin: 4px auto;
 }
+div.sidepanel ul{
+    padding-left: 0;
+    list-style-type: none;
+}
+div.sidepanel li{
+    text-align: center;
+}
 input, button, select {
     width: 90%;
     max-width: 400px;
@@ -38,13 +45,14 @@ div.sidepanel {
     align-content: center;
     left: 0;
     top: 0;
-    width: 90vh;
+    width: 100vw;
     height: 40vh;
     background-color: rgb(100, 4, 4);
     color: rgb(66, 66, 172);
     padding: 5px;
     box-sizing: border-box;
-    margin: 4px;
+    margin: 4px auto;
+    font-size: 1.5rem;
 }
 @media (min-width: 768px){
     .h3pc{
@@ -82,6 +90,7 @@ div.sidepanel {
     padding: 5px;
     box-sizing: border-box;
     margin: 4px;
+    font-size: 1rem;
     }
 }
 img, .box {
@@ -123,13 +132,6 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.sidepanel li{
-    text-align: center; 
-}
-div.sidepanel ul{
-    padding-left: 0;
-    list-style-type: none;
 }
 ul{
     list-style-type: none;
